[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/actors/undersion/undersion.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/undersion/Undersion.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/undersion/states/RollState.gd" type="Script" id=3]
[ext_resource path="res://scenes/actors/undersion/bubbles.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/undersion/swim.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/toad/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/undersion/top.png" type="Texture" id=7]
[ext_resource path="res://scenes/actors/toad/explosion.png" type="Texture" id=8]
[ext_resource path="res://scenes/actors/undersion/bottom.png" type="Texture" id=9]
[ext_resource path="res://scenes/actors/undersion/afterimage.png" type="Texture" id=10]

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, -1.67513, 0, 0, Vector2( 1, 0 ), -2.81081, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=20]
colors = PoolColorArray( 1, 1, 1, 0.603922, 1, 1, 1, 0 )

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.13, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.13, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "default",
"speed": 9.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.880435, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 41, 42 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 41, 0, 41, 42 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 82, 0, 41, 42 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 42, 41, 42 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 41, 42, 41, 42 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 82, 42, 41, 42 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 0, 84, 41, 42 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[node name="Undersion" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
move_speed = 375.0
acceleration = 12.5
deceleration = 12.5
friction = 6.25
rot_speed = 10.0
rot_intensity = 31.25
bump_thres = 800.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 0.35
local_coords = false
texture = ExtResource( 10 )
spread = 0.0
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 19 )
color_ramp = SubResource( 20 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 3 )
amount = 24
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 8.0
gravity = Vector2( 0, -36 )
color_ramp = SubResource( 5 )
anim_speed = 1.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
material = SubResource( 3 )
amount = 12
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 24.0
gravity = Vector2( 0, -36 )
color_ramp = SubResource( 4 )
anim_speed = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DemonDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DemonDetector"]
shape = SubResource( 2 )

[node name="States" type="Node" parent="."]

[node name="RollState" type="Node" parent="States"]
script = ExtResource( 3 )
boost_power = 625.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="States/RollState"]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -8.0
bus = "Sounds"

[node name="DeathParticles" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="DeathParticles"]
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
texture = ExtResource( 9 )
spread = 180.0
gravity = Vector2( 0, -72 )
initial_velocity = 80.0
initial_velocity_random = 1.0
angular_velocity = 30.0
angular_velocity_random = 1.0
color_ramp = SubResource( 6 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="DeathParticles"]
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
texture = ExtResource( 7 )
spread = 180.0
gravity = Vector2( 0, -72 )
initial_velocity = 80.0
initial_velocity_random = 1.0
angular_velocity = 30.0
angular_velocity_random = 1.0
color_ramp = SubResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0
bus = "Sounds"

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 14 )
